--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </a>
 
     <footer>
-        <p>© 2025 Mi Tienda de Ropa | Contacto: correo@mitienda.com</p>
+        <p>© 2025 Mi Tienda de Ropa | Contacto: jairoalmada1990@gmail.com</p>
     </footer>
 </body>
 </html>
